--- a/docs/content/operator/iota-full-node.mdx
+++ b/docs/content/operator/iota-full-node.mdx
@@ -13,13 +13,13 @@ IOTA Full nodes validate blockchain activities, including transactions, checkpoi
 
 This role enables validators to focus on servicing and processing transactions. When a validator commits a new set of transactions (or a block of transactions), the validator pushes that block to all connected Full nodes that then service the queries from clients.
 
-## Features 
+## Features
 
 IOTA Full nodes:
 - Track and verify the state of the blockchain, independently and locally.
 - Serve read requests from clients.
 
-## State synchronization 
+## State synchronization
 IOTA Full nodes sync with validators to receive new transactions on the network.
 
 A transaction requires a few round trips to 2f+1 validators to form a transaction certificate (TxCert).
@@ -32,7 +32,7 @@ This synchronization process includes:
 
 This synchronization process requires listening to at a minimum 2f+1 validators to ensure that a Full node has properly processed all new transactions. IOTA will improve the synchronization process with the introduction of checkpoints and the ability to synchronize with other Full nodes.
 
-## Architecture 
+## Architecture
 
 An IOTA Full node is essentially a read-only view of the network state. Unlike validator nodes, Full nodes cannot sign transactions, although they can validate the integrity of the chain by re-executing transactions that a quorum of validators previously committed.
 
@@ -40,11 +40,11 @@ Today, an IOTA Full node maintains the full history of the chain.
 
 Validator nodes store only the latest transactions on the frontier of the object graph (for example, transactions with >0 unspent output objects).
 
-## Full node setup 
+## Full node setup
 
 Follow the instructions here to run your own IOTA Full node.
 
-### Hardware requirements 
+### Hardware requirements
 
 Suggested minimum hardware to run an IOTA Full node:
 
@@ -52,7 +52,7 @@ Suggested minimum hardware to run an IOTA Full node:
 - RAM: 128 GB
 - Storage (SSD): 4 TB NVMe drive
 
-### Software requirements 
+### Software requirements
 
 IOTA recommends running IOTA Full nodes on Linux. IOTA supports the Ubuntu and Debian distributions. You can also run an IOTA Full node on macOS.
 
@@ -78,15 +78,15 @@ clang \
 cmake
 ```
 
-## Configure a Full node 
+## Configure a Full node
 
 You can configure an IOTA Full node either using Docker or by building from source.
 
-### Using Docker Compose 
+### Using Docker Compose
 
 Follow the instructions in the [Full node Docker Readme](https://github.com/iotaledger/iota/tree/develop/docker/fullnode#readme) to run an IOTA Full node using Docker, including [resetting the environment](https://github.com/iotaledger/iota/tree/develop/docker/fullnode#reset-the-environment).
 
-### Setting up a local IOTA repository 
+### Setting up a local IOTA repository
 
 You must get the latest source files from the IOTA GitHub repository.
 1. Set up your fork of the IOTA repository:
@@ -109,23 +109,23 @@ Open a terminal or console to the `iota` directory you downloaded in the previou
 1. Make a copy of the [Full node YAML template](https://github.com/iotaledger/iota/blob/develop/crates/iota-config/data/fullnode-template.yaml):
     `cp crates/iota-config/data/fullnode-template.yaml fullnode.yaml`
 1. Download the genesis blob for the network to use:
-    - [Devnet genesis blob](https://github.com/iotaledger/iota/TODO):
-        `curl -fLJO TODO`
+    - [Alphanet genesis blob](https://dbfiles.iota-rebased-alphanet.iota.cafe/genesis.blob):
+        `curl -fLJO https://dbfiles.iota-rebased-alphanet.iota.cafe/genesis.blob`
     - [Testnet genesis blob](https://github.com/iotaledger/iota/TODO):
         `curl -fLJO TODO`
     - [Mainnet genesis blob](https://github.com/iotaledger/iota/TODO):
         `curl -fLJO TODO`
-1. For Testnet or Mainnet: Edit the `fullnode.yaml` file to include peer nodes for state synchronization. Append the following to the end of the current configuration:
+1. For Alphanet or Testnet: Edit the `fullnode.yaml` file to include peer nodes for state synchronization. Append the following to the end of the current configuration:
 
     <Tabs groupId="network">
 
-    <TabItem label="Mainnet" value="mainnet">
+    <TabItem label="Alphanet" value="alphanet">
 
     ```yaml
     p2p-config:
       seed-peers:
-        - address: TODO # Example: /dns/mel-00.mainnet.iota.io/udp/8084
-          peer-id: TODO # Example: d32b55bdf1737ec415df8c88b3bf91e194b59ee3127e3f38ea46fd88ba2e7849
+        - address: /dns/access-0.r.iota-rebased-alphanet.iota.cafe/udp/8084
+          peer-id: 10cbea76ea5ec3f7ee827f0c11f612f0059949127876dd964b09304bf8808d18
     ```
 
     </TabItem>
@@ -141,7 +141,7 @@ Open a terminal or console to the `iota` directory you downloaded in the previou
     </TabItem>
 
     </Tabs>
-    
+
 1. Optional: Skip this step to accept the default paths to resources. Edit the fullnode.yaml file to use custom paths.
 1. Update the `db-path` field with the path to the Full node database.
     `db-path: "/db-files/iota-fullnode"`
@@ -159,7 +159,7 @@ Run the following command to compile the `iota-node`.
 cargo run --release --bin iota-node
 ```
 
-### Starting services 
+### Starting services
 
 At this point, your IOTA Full node is ready to connect to the IOTA network.
 
@@ -172,7 +172,7 @@ If your setup is successful, your IOTA Full node is now connected to the appropr
 
 Your Full node serves the read endpoints of the IOTA JSON-RPC API at: `http://127.0.0.1:9000`.
 
-### Troubleshooting 
+### Troubleshooting
 If, during the compilation step, you receive a `cannot find -lpq` error, you are missing the `libpq` library. Use `sudo apt-get install libpq-dev` to install on Linux, or `brew install libpq` on MacOS. After you install on MacOS, create a Homebrew link using `brew link --force libpq`. For further context, reference the [issue on Stack Overflow](https://stackoverflow.com/questions/70313347/ld-library-not-found-for-lpq-when-build-rust-in-macos?rq=1).
 
 If you receive the following error:
@@ -187,17 +187,17 @@ Then update the metrics address in your fullnode.yaml file to use port `9180`.
 metrics-address: "0.0.0.0:9180"
 ```
 
-## Monitoring 
+## Monitoring
 
 Monitor your Full node using the instructions in the _Node Monitoring and Metrics_ section.
 
 The default metrics port is `9184`. To change the port, edit your `fullnode.yaml` file.
 
-## Update your Full node 
+## Update your Full node
 
 Whenever IOTA releases a new version, you must update your Full node with the release to ensure compatibility with the network it connects to. For example, if you use IOTA Testnet you should install the version of IOTA running on IOTA Testnet.
 
-### Update with Docker Compose 
+### Update with Docker Compose
 
 Follow the instructions to [reset the environment](https://github.com/iotaledger/iota/tree/develop/docker/fullnode#reset-the-environment), namely by running the command:
 
@@ -205,7 +205,7 @@ Follow the instructions to [reset the environment](https://github.com/iotaledger
 docker-compose down --volumes
 ```
 
-### Update from source 
+### Update from source
 
 If you followed the instructions for Building from Source, use the following steps to update your Full node:
 
@@ -241,13 +241,13 @@ If you followed the instructions for Building from Source, use the following ste
     ```shell
     ./target/release/iota-node --config-path fullnode.yaml
     ```
-    
+
 Your Full node starts on: http://127.0.0.1:9000.
 
 ## Object pruning {#object-pruning}
 
-IOTA adds new object versions to the database as part of transaction execution. This makes previous versions ready for 
-garbage collection. However, without pruning, this can result in database performance degradation and requires large 
+IOTA adds new object versions to the database as part of transaction execution. This makes previous versions ready for
+garbage collection. However, without pruning, this can result in database performance degradation and requires large
 amounts of storage space. IOTA identifies the objects that are eligible for pruning in each checkpoint, and then performs
 the pruning in the background.
 
@@ -255,7 +255,7 @@ You can enable pruning for an IOTA node by adding the `authority-store-pruning-c
 
 ```yaml
 authority-store-pruning-config:
-  # Number of epoch dbs to keep 
+  # Number of epoch dbs to keep
   # Not relevant for object pruning
   num-latest-epoch-dbs-to-retain: 3
   # The amount of time, in seconds, between running the object pruning task.
@@ -264,16 +264,16 @@ authority-store-pruning-config:
   # Number of epochs to wait before performing object pruning.
   # When set to 0, IOTA prunes old object versions as soon
   # as possible. This is also called *aggressive pruning*, and results in the most effective
-  # garbage collection method with the lowest disk usage possible. 
+  # garbage collection method with the lowest disk usage possible.
   # This is the recommended setting for IOTA Validator nodes since older object versions aren't
   # necessary to execute transactions.
   # When set to 1, IOTA prunes only object versions from transaction checkpoints
-  # previous to the current epoch. In general, when set to N (where N >= 1), IOTA prunes  
-  # only object versions from checkpoints up to `current - N` epoch. 
-  # It is therefore possible to have multiple versions of an object present 
-  # in the database. This setting is recommended for IOTA Full nodes as they might need to serve 
+  # previous to the current epoch. In general, when set to N (where N >= 1), IOTA prunes
+  # only object versions from checkpoints up to `current - N` epoch.
+  # It is therefore possible to have multiple versions of an object present
+  # in the database. This setting is recommended for IOTA Full nodes as they might need to serve
   # RPC requests that require looking up objects by ID and Version (rather than just the latest
-  # version). However, if your Full node does not serve RPC requests you should then also enable  
+  # version). However, if your Full node does not serve RPC requests you should then also enable
   # aggressive pruning.
   num-epochs-to-retain: 0
   # Advanced setting: Maximum number of checkpoints to prune in a batch. The default
@@ -301,9 +301,9 @@ authority-store-pruning-config:
   max-checkpoints-in-batch: 10
   max-transactions-in-batch: 1000
   # Number of epochs to wait before performing transaction pruning.
-  # When this is N (where N >= 2), IOTA prunes transactions and effects from 
+  # When this is N (where N >= 2), IOTA prunes transactions and effects from
   # checkpoints up to the `current - N` epoch. IOTA never prunes transactions and effects from the current and
-  # immediately prior epoch. N = 2 is a recommended setting for IOTA Validator nodes and IOTA Full nodes that don't 
+  # immediately prior epoch. N = 2 is a recommended setting for IOTA Validator nodes and IOTA Full nodes that don't
   # serve RPC requests.
   num-epochs-to-retain-for-checkpoints: 2
   # Ensures that individual database files periodically go through the compaction process.
